2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/dial/AbstractDialLayer.java
	(hashCode): Implemented.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/statistics/DefaultBoxAndWhiskerXYDataset.java
	(add): Fire dataset change event,
	(getY): Removed redundant constructor call,
	(equals): New method override,
	(clone): Likewise.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(equals): Added check for domain/rangeTickBandPaint,
	* source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
	(fillDomainGridBand): Handle plot orientation properly,
	(fillRangeGridBand): Likewise.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1827829 from Richard West:
	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItemLabel): Fixed NPE.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYAreaRenderer.java
	(drawItem): Simplified entity generation,
	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItem): Likewise.

2007-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYDotRenderer.java
	(legendShape): New field,
	(XYDotRenderer): Initialise new field,
	(getLegendShape): New method,
	(setLegendShape): Likewise,
	(getLegendItem): New method override,
	(equals): Updated for new field,
	(readObject): New method,
	(writeObject): New method.

2007-11-07  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(paintComponent): Clear refreshBuffer flag before drawing chart.

2007-11-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/statistics/DefaultMultiValueCategoryDataset.java
	(getValues): Return EMPTY_LIST rather than null.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>
