@@ -1,3 +1,12 @@
+2007-11-13  David Gilbert  <david.gilbert@pobject-refinery.com>
+
+	* source/oprg/jfree/chart/HashUtilities.java
+	(hashCode(int, boolean)): New method,
+	(hashCode(int, double)): Likewise,
+	(hashCode(int, Paint)): Likewise,
+	(hashCode(int, Stroke)): Likewise,
+	(hashCode(int, String)): Likewise.
+
 2007-11-13  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/plot/dial/AbstractDialLayer.java
